# easy-rs

./: .env.example  .gitignore  Cargo.toml  README.md
examples_data/: barter_market_sample.jsonl
src/: lib.rs  main.rs  orderbook_store.rs
src/cold_path/: alpaca_feed.rs  feed_msg.rs  mod.rs  sink.rs  symbols.rs  ticks.rs  time_anchor.rs
src/data/: bars.rs  candle.rs  mod.rs
src/hot_path/: applier.rs  mod.rs  quote_event.rs  ring.rs
src/indicators/: mod.rs
src/viz/: app.rs  classify.rs  mod.rs  pipeline.rs  store.rs  theme.rs
