[package]
name = "easy-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
default = []
dashboard = ["dep:arc-swap", "dep:eframe", "dep:egui", "dep:egui_plot"]
tracy = ["dep:tracing-tracy"]

[dependencies]
arc-swap = { version = "1.7", optional = true }
apca = "0.30.0"
chrono = "0.4"
crossbeam-queue = { version = "0.3", default-features = false }
dotenvy = "0.15"
eframe = { version = "0.29", optional = true, default-features = true }
egui = { version = "0.29", optional = true }
egui_plot = { version = "0.29", optional = true }
futures = { version = "0.3", default-features = false, features = ["std"] }
num-decimal = { version = "0.2.4", default-features = false, features = ["num-v04", "serde"] }
parking_lot = "0.12"
polars = { version = "0.51", features = ["lazy", "temporal", "fmt"] }
plotters = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ta = "0.5"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = { version = "0.11", optional = true }

[[bin]]
name = "easy-rs-dashboard"
path = "src/bin/dashboard.rs"
required-features = ["dashboard"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
