[package]
name = "easy-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
default = []
tui = ["dep:arc-swap", "dep:crossterm", "dep:ratatui"]
tracy = ["dep:tracing-tracy"]

[dependencies]
arc-swap = { version = "1.7", optional = true }
apca = "0.30.0"
chrono = "0.4"
crossbeam-queue = { version = "0.3", default-features = false }
crossterm = { version = "0.28", optional = true }
dotenvy = "0.15"
futures = { version = "0.3", default-features = false, features = ["std"] }
num-decimal = { version = "0.2.4", default-features = false, features = ["num-v04", "serde"] }
parking_lot = "0.12"
polars = { version = "0.51", features = ["lazy", "temporal", "fmt"] }
ratatui = { version = "0.30.0", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ta = "0.5"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tracy = { version = "0.11", optional = true }

[[bin]]
name = "easy-rs-tui"
path = "src/bin/tui.rs"
required-features = ["tui"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
